# trapla

./: .gitignore  CMakeLists.txt  readme.md
data/csv/: trajectory.csv
doc/: problem_flow.md  project.md  scripting.md  sync.md
include/: prepare.hpp
include/aStar/: aStar.hpp  direction.hpp  graph.hpp
include/csv/: reader.hpp  writer.hpp
include/csvReader/: reader.hpp
include/ground/: ground.hpp
include/robot/: foot.hpp  robot.hpp
include/utils/: fast_flatness.hpp  geometry.hpp  index.hpp  io.hpp  mat.hpp  order.hpp  scale.hpp  sequence.hpp  test_framework.hpp
scripts/: clean_comments.py  plot_guides.py  run_tests.py  spacing_visualizer.py
scripts/data_generator/: gen_map.m  gen_map.py
scripts/platform/windows/: run_tests.bat
scripts/sync/: get-sync.py  put-sync.py
scripts/transor/: jpg2csv.py
src/: main.cpp
src/aStar/: aStar.cpp  direction.cpp  graph.cpp
src/csv/: reader.cpp  writer.cpp
src/csvReader/: reader.cpp
src/ground/: ground.cpp
src/robot/: foot.cpp  robot.cpp
src/utils/: fast_flatness.cpp  geometry.cpp  index.cpp  mat.cpp  order.cpp  scale.cpp  sequence.cpp
tests/: aStar_test.cpp  comparison_test.cpp  constraints_test.cpp  direction_test.cpp  foot_test.cpp  ground_test.cpp  main_test.cpp  run_tests.py  sequence_test.cpp  utils_test.cpp
tests/platform/windows/: run_tests.bat
